--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "activation_threshold": 60,
     "activation_delay": 0,
-    "key_push": "enter",
+    "key_push": "1",
     "key_pull": "a",
     "key_lift": "d",
     "key_left": "left",
@@ -12,7 +12,7 @@
     "dev2_ip": ". . .",
     "fes_on": "push",
     "fes_off": "-",
-    "fes_port": "COM8",
+    "fes_port": "COM9",
     "fes_acceptable_dly": 9,
     "fes_min_dly": 2,
     "smart_on_period": 5,
