--- a/config.json
+++ b/config.json
@@ -1,23 +1,27 @@
 {
-    "activation_threshold": 60,
+    "activation_threshold": 0,
     "activation_delay": 0,
-    "key_push": "enter",
+    "key_push": "w",
     "key_pull": "a",
     "key_lift": "d",
-    "key_left": "left",
-    "key_right": "-",
+    "key_drop": "s",
     "dev1_act": "push",
     "dev2_act": "-",
     "dev1_ip": "192.168.0.39",
     "dev2_ip": ". . .",
     "fes_on": "push",
     "fes_off": "-",
-    "fes_port": "COM8",
+    "fes_port": "COM7",
     "fes_acceptable_dly": 9,
     "fes_min_dly": 2,
     "smart_on_period": 5,
-    "btn_1": "push",
-    "btn_2": "-",
+    "btn_1": "pull",
+    "btn_2": "push",
     "btn_3": "-",
-    "btn_4": "-"
+    "btn_4": "-",
+    "spot_play": "push",
+    "spot_pause": "-",
+    "spot_next": "-",
+    "spot_prev": "-",
+    "spot_min_dly": 0
 }
