--- a/config.json
+++ b/config.json
@@ -14,14 +14,26 @@
     "fes_acceptable_dly": 9,
     "fes_min_dly": 2,
     "smart_on_period": 5,
-    "btn_1": "pull",
-    "btn_2": "push",
+    "btn_1": "push",
+    "btn_2": "pull",
     "btn_3": "-",
     "btn_4": "-",
-    "spot_play": "push",
+    "spot_play": "pull",
     "spot_pause": "-",
     "spot_next": "-",
     "spot_prev": "-",
     "spot_min_dly": 0,
-    "hub_name": "AT-HUB-6"
+    "hub_name": "AT-HUB-1",
+    "s1": "Out1",
+    "s2": "Out3",
+    "s3": "Out2",
+    "s4": "Out3",
+    "s1D": "Freeze/Unfreeze",
+    "s2D": "Pause",
+    "s3D": "Pause",
+    "s4D": "-",
+    "pushSW": "forward",
+    "pullSW": "backward",
+    "liftSW": "left",
+    "dropSW": "right"
 }
